scrollbar visibility fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,12 +13,12 @@
 
   /* Handle */
   .no-scrollbar::-webkit-scrollbar-thumb {
-    background: #888;
+    background: #630436;
   }
 
   /* Handle on hover */
   .no-scrollbar::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #630436;
   }
 }
 
